[package]
name = "rrss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0.2"
anyhow = "1.0.70"
reqwest = "0.11.15"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"]}
serde_json = "1.0.94"
serde = { version = "1.0", features = ["derive"] }
insta = "1.28.0"
